ONM-5611: Fix server column when name too long

--- a/public/assets/src/opennemas-webarch/less/helpers/_utils.less
+++ b/public/assets/src/opennemas-webarch/less/helpers/_utils.less
@@ -18,6 +18,10 @@
   width: 100%;
 }
 
+.m-w-100 {
+  max-width: 100%;
+}
+
 .nowrap {
   overflow: hidden;
   text-overflow: ellipsis;
